force-app/main/default/objects/Catalogo_Sucursales__c/Catalogo_Sucursales__c.object-meta.xml
<CustomObject>
    <label>Catalogo Sucursal</label>
    <nameField>
        <label>Nombre de Catalogo Sucursales</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogos de Sucursales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>