force-app/main/default/objects/Catalogo_Sucursales__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departamento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Departamento</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Catalogos de Sucursales</relationshipLabel>
    <relationshipName>Catalogos_de_Sucursales</relationshipName>
    <type>Lookup</type>
</CustomField>