force-app/main/default/objects/Catalogo_Sucursales__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>