force-app/main/default/objects/Catalogo_Sucursales__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Teléfono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>